--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://danhakin.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Dan's Pad
+subtitle: Thoughts from a techie mind.
+author: danhakin
 simple_search: http://google.com/search
 description:
 
